--- a/index.html
+++ b/index.html
@@ -1,27 +1,24 @@
-!DOCTYPE html>
-<html lang="pt-br">
-
+<!DOCTYPE html>
+<html lang="pt-br"
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="style.css">
-    <title> Indicação de filmes de Romance</title>
+<meta charset ="UTF-8"/>
+<meta name="viewport" content="width=device, initial-scale=1.0"
+<link rel="stylesheet" href="style.css" />
+<title> Meu portfólio</title>
 </head>
-
+<body></body>
+</html>
 <body>
-    <header class="container text-center">
-            srcset="">
-        <div>
-        </div>
-    </header>
-    <main class="container mt-5">
-        <h2>filmes</h2>
-        <div class="row">
-            <!--A proposta-->
-            <div class="col-md-4">
-                <div class="card">
-                    <img src="img/41odhgue-zL._SY445_SX342_.jpg" class="card-img-top" alt="Capa do Filme">
-                    
+    <img src="img/avatar-perfil.png" alt="avatar do Rafael" srcset="" />
+</body>
+<p>Eu sou Rafael_</p>
+<h1>Eu sou um estudante</h1>
+<p>
+    Sou um estudante do segundo ano do ensino médio. Estou aprendendo a utilizar o html, e aprendendo a fazer meu primeiro portfólio.
+</p>
+<p>Aprendo rápido o que imposto a mim.</p>
+<div>
+    
+</div>
+</body>
 
