--- a/index.html
+++ b/index.html
@@ -1,24 +1,33 @@
 <!DOCTYPE html>
-<html lang="pt-br"
+<html lang="pt-br">
 <head>
 <meta charset ="UTF-8"/>
 <meta name="viewport" content="width=device, initial-scale=1.0"
 <link rel="stylesheet" href="style.css" />
 <title> Meu portfólio</title>
 </head>
-<body></body>
-</html>
+
 <body>
     <img src="img/avatar-perfil.png" alt="avatar do Rafael" srcset="" />
-</body>
+    <header class="container">
+
+    </header>
 <p>Eu sou Rafael_</p>
 <h1>Eu sou um estudante</h1>
 <p>
     Sou um estudante do segundo ano do ensino médio. Estou aprendendo a utilizar o html, e aprendendo a fazer meu primeiro portfólio.
 </p>
-<p>Aprendo rápido o que imposto a mim.</p>
+<p>Aprendo rápido o que é imposto a mim.</p>
 <div>
+    <p>Html</p>
+    <P>Css</P>
+    <P>Javascript</P>
+    <p>Scratch</p>
     
 </div>
-</body>
 
+<script
+    scr=
+</script>
+</body>
+</html>
