--- a/index.html
+++ b/index.html
@@ -4,20 +4,23 @@
 <meta charset ="UTF-8"/>
 <meta name="viewport" content="width=device, initial-scale=1.0"
 <link rel="stylesheet" href="style.css" />
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
 <title> Meu portfólio</title>
 </head>
 
 <body>
     <img src="img/avatar-perfil.png" alt="avatar do Rafael" srcset="" />
     <header class="container">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 
     </header>
-<p>Eu sou Rafael_</p>
+<p>Livros de ficção e fantasia</p>
 <h1>Eu sou um estudante</h1>
 <p>
-    Sou um estudante do segundo ano do ensino médio. Estou aprendendo a utilizar o html, e aprendendo a fazer meu primeiro portfólio.
+    Nesse portfólio irei apresentar alguns dos melhores livros de ficção e fantasia de todos os tempos, fazem uma reflexão sobre: política, religião, futuro da humanidade dentre outros vários aspectos.
+
 </p>
-<p>Aprendo rápido o que é imposto a mim.</p>
+<p></p>
 <div>
     <p>Html</p>
     <P>Css</P>
@@ -25,9 +28,6 @@
     <p>Scratch</p>
     
 </div>
-
-<script
-    scr=
-</script>
+</header>
 </body>
-</html>
+ 
