--- a/index.html
+++ b/index.html
@@ -1,33 +1,84 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-<meta charset ="UTF-8"/>
-<meta name="viewport" content="width=device, initial-scale=1.0"
-<link rel="stylesheet" href="style.css" />
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-<title> Meu portfólio</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link
+href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+rel="stylesheet"
+integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+crossorigin="anonymous" />
+<link rel="stylesheet" href="style.css">
+<title>Meu Portfólio</title>
 </head>
 
 <body>
-    <img src="img/avatar-perfil.png" alt="avatar do Rafael" srcset="" />
-    <header class="container">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
-
-    </header>
-<p>Livros de ficção e fantasia</p>
-<h1>Eu sou um estudante</h1>
-<p>
-    Nesse portfólio irei apresentar alguns dos melhores livros de ficção e fantasia de todos os tempos, fazem uma reflexão sobre: política, religião, futuro da humanidade dentre outros vários aspectos.
-
-</p>
-<p></p>
+<header class="container text-center">
+<img src="img/41RBd2DvmgL._SY445_SX342_.jpg" alt="logo da página" class="rounded-circle"
+width="150" height="150">
+<p class="lead">livros de fantasia e ficção</p>
+<h1>Senhor dos anéis</h1>
+<p>Senhor dos anéis conta a história de Frodo o Bolseira, em uma jornada para destruir o poderoso Sauron, vilão que construiu o anel para dominar a terra-média. </p>
+<h4></h4>
 <div>
-    <p>Html</p>
-    <P>Css</P>
-    <P>Javascript</P>
-    <p>Scratch</p>
-    
+<p class="badge text-bg-secondary">Brincar</p>
+<p class="badge text-bg-secondary">Dormir</p>
+<p class="badge text-bg-secondary">Passear</p>
+<p class="badge text-bg-secondary">Comer</p>
 </div>
 </header>
+<main class="container mt-5">
+<h2>Nossas Aventuras</h2>
+<div class="row">
+<div class="col-md-4">
+<div class="card">
+<img src="img/Amigos.jpg" class="card-img-top">
+<div class="card-body">
+<h5 class="card-title">Amigos desde sempre</h5>
+<p class="card-text">Apesar de ser o mais novo, o Recruta
+adotou o Chefe logo que chegou na família. Seu irmão mais velho sempre foi sinônimo
+de amizade, amor e confiança.</p>
+
+<button type="button" class="btn btn-secondary">Ver
+mais</button>
+</div>
+</div>
+</div>
+<div class="col-md-4">
+<div class="card">
+<img src="img/familia.jpg" class="card-img-top">
+<div class="card-body">
+<h5 class="card-title">Passeios em família</h5>
+<p class="card-text">"Nossos AUmanos sempre priorizaram por
+momentos em família, fosse com uma brincadeira em casa ou um passeio no parque."</p>
+<button type="button" class="btn btn-secondary">Ver
+mais</button>
+</div>
+</div>
+</div>
+
+<div class="col-md-4">
+<div class="card">
+<img src="img/Amigos2.jpg" class="card-img-top">
+<div class="card-body">
+<h5 class="card-title">A velhice</h5>
+<p class="card-text">Assim como para as pessoas, a idade
+chega também para os animais. E não foi diferente com esses peludinhos, o Chefe teve
+momentos bem difíceis com várias enfermidades, mas o Recruta jamais o deixou
+sozinho... </p>
+<button type="button" class="btn btn-secondary">Ver
+mais</button>
+</div>
+</div>
+</div>
+</div>img/41RBd2DvmgL._SY445_SX342_.jpg
+</main>
+<footer class="container">
+<h3> Acompanhe um poquinho da nossa história</h3>
+<div>
+<a href="https://www.instagram.com/chefe.recruta/">Instagram</a>
+</div>
+<p class="my-5 text-center">© Copyright 2025. Produzido pela nossa AUmana</p>
+</footer>
 </body>
- 
+</html>
